--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\StaticPatternModel.cs" />
     <Compile Include="Model\TimePeriodModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
